--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yu-css",
-  "version": "1.2.3",
-  "description": "css封装",
+  "version": "1.2.9",
+  "description": "自适应布局rem",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
